<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">HabitRPG</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="add">Add</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="product_hint">Enter Products for the Store</string>
    <string name="department_store">My Department Store &#8230;</string>

    <string-array name="dept_array">
        <item>Apparel</item>
        <item>Beauty</item>
        <item>Electronics</item>
        <item>Grocery</item>
        <item>Home Improvement</item>
        <item>Jewelry</item>
        <item>Pharmacy</item>
    </string-array>

    <color name="snow">#eee9e9</color>
    <color name="ltsnow">#fffafa</color>
    <color name="ltgrey">#A0A0A0</color>
    <color name="colorHP">#d64040</color>
    <color name="colorXP">#ffcf42</color>
    <color name="buy">#D0E0E3</color>

    <string name="name">"Name: "</string>
    <string name="your_character_icon">Your character icon</string>
    <string name="_gold">"Gold: "</string>
    <string name="plus">+</string>
    <string name="minus">-</string>
    <string name="null_gold">0 G</string>
    <string name="buy">Buy</string>
    <string name="server_url">Server URL:</string>
    <string name="user_id">User ID:</string>
    <string name="api_token">API Token:</string>
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="change_config">Change Config</string>
    <string name="cfg">Cfg.</string>
    <string name="refresh">Refresh</string>
    <string name="hp_">"HP: "</string>
    <string name="xp_">"XP: "</string>
    <string name="__">[0/0]</string>
    <string name="report_issue">Report Issue</string>
    <string name="open_habitrpg_com">Open HabitRPG.com</string>
    <string name="title_activity_activity_apisetup">ActivityAPISetup</string>
    <string name="qr_code">QR Code</string>
    <string name="refresh_icon">Refresh Widget Icon</string>
    <string name="title_activity_about">About</string>
    <string name="about">About</string>

</resources>